// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain a proper content 1`] = `
<cert-card__controls
  cert={
    Object {
      "available_actions": Array [
        Object {
          "id": "download",
        },
      ],
      "id": 11,
    }
  }
  onCloseClick={[MockFunction]}
>
  <div
    className="cert-card__controls"
    data-lego="react"
    style={Object {}}
  >
    <copy-link
      getURL={[Function]}
      key="copy-link"
    >
      <div
        className="copy-link"
        data-lego="react"
        style={Object {}}
      >
        <button2
          attrs={
            Object {
              "title": "Скопировать ссылку",
            }
          }
          key="button"
          onClick={[Function]}
          size="s"
          tabIndex={0}
          theme="clear"
          view="classic"
        >
          <button
            aria-disabled="false"
            aria-pressed="false"
            autoComplete="off"
            className="control button2 button2_view_classic button2_size_s button2_theme_clear"
            data-lego="react"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={Object {}}
            tabIndex={0}
            title="Скопировать ссылку"
            type="button"
          >
            <button2__icon
              key="only-icon"
              size="s"
            >
              <icon
                mix={
                  Array [
                    undefined,
                    Object {
                      "block": "button2",
                      "elem": "icon",
                      "mods": Object {
                        "side": undefined,
                      },
                    },
                  ]
                }
                size="s"
                type="copy-link"
              >
                <span
                  className="icon icon_type_copy-link icon_size_s button2__icon"
                  data-lego="react"
                  style={Object {}}
                />
              </icon>
            </button2__icon>
          </button>
        </button2>
        <popup2
          anchor={[Function]}
          autoclosable={true}
          directions={
            Array [
              "left-center",
            ]
          }
          hasTail={true}
          key="popup"
          mix={
            Object {
              "block": "copy-link",
              "elem": "popup",
              "mods": Object {},
            }
          }
          onAfterClose={[Function]}
          onAfterOpen={[Function]}
          onBeforeClose={[Function]}
          onBeforeOpen={[Function]}
          onOutsideClick={[Function]}
          secondaryOffset={0}
          tailOffset={0}
          target="anchor"
          theme="normal"
          view="classic"
          visible={false}
          zIndexGroupLevel={0}
        />
      </div>
    </copy-link>
    <button2
      attrs={
        Object {
          "title": "Скачать .pem",
        }
      }
      key="download"
      size="s"
      tabIndex={0}
      target="_blank"
      theme="clear"
      type="link"
      url="/api/frontend/certificate/11/download/?format=pem"
      view="classic"
    >
      <a
        aria-disabled="false"
        aria-pressed="false"
        className="control button2 button2_view_classic button2_size_s button2_theme_clear button2_type_link"
        data-lego="react"
        href="/api/frontend/certificate/11/download/?format=pem"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
        tabIndex={0}
        target="_blank"
        title="Скачать .pem"
      >
        <button2__icon
          key="only-icon"
          size="s"
        >
          <icon
            mix={
              Array [
                undefined,
                Object {
                  "block": "button2",
                  "elem": "icon",
                  "mods": Object {
                    "side": undefined,
                  },
                },
              ]
            }
            size="s"
            type="download"
          >
            <span
              className="icon icon_type_download icon_size_s button2__icon"
              data-lego="react"
              style={Object {}}
            />
          </icon>
        </button2__icon>
      </a>
    </button2>
    <button2
      key="close"
      mix={
        Object {
          "block": "cert-card",
          "elem": "button-close",
          "mods": Object {},
        }
      }
      onClick={[MockFunction]}
      size="s"
      tabIndex={0}
      theme="clear"
      view="classic"
    >
      <button
        aria-disabled="false"
        aria-pressed="false"
        autoComplete="off"
        className="control button2 button2_view_classic button2_size_s button2_theme_clear cert-card__button-close"
        data-lego="react"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
        tabIndex={0}
        type="button"
      >
        <button2__icon
          key="only-icon"
          size="s"
        >
          <icon
            mix={
              Array [
                undefined,
                Object {
                  "block": "button2",
                  "elem": "icon",
                  "mods": Object {
                    "side": undefined,
                  },
                },
              ]
            }
            size="s"
            type="cross-websearch"
          >
            <span
              className="icon icon_type_cross-websearch icon_size_s button2__icon"
              data-lego="react"
              style={Object {}}
            />
          </icon>
        </button2__icon>
      </button>
    </button2>
  </div>
</cert-card__controls>
`;

exports[`should not draw the download button if there is no relevant available action 1`] = `
<cert-card__controls
  cert={
    Object {
      "available_actions": Array [],
      "id": 11,
    }
  }
  onCloseClick={[MockFunction]}
>
  <div
    className="cert-card__controls"
    data-lego="react"
    style={Object {}}
  >
    <copy-link
      getURL={[Function]}
      key="copy-link"
    >
      <div
        className="copy-link"
        data-lego="react"
        style={Object {}}
      >
        <button2
          attrs={
            Object {
              "title": "Скопировать ссылку",
            }
          }
          key="button"
          onClick={[Function]}
          size="s"
          tabIndex={0}
          theme="clear"
          view="classic"
        >
          <button
            aria-disabled="false"
            aria-pressed="false"
            autoComplete="off"
            className="control button2 button2_view_classic button2_size_s button2_theme_clear"
            data-lego="react"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={Object {}}
            tabIndex={0}
            title="Скопировать ссылку"
            type="button"
          >
            <button2__icon
              key="only-icon"
              size="s"
            >
              <icon
                mix={
                  Array [
                    undefined,
                    Object {
                      "block": "button2",
                      "elem": "icon",
                      "mods": Object {
                        "side": undefined,
                      },
                    },
                  ]
                }
                size="s"
                type="copy-link"
              >
                <span
                  className="icon icon_type_copy-link icon_size_s button2__icon"
                  data-lego="react"
                  style={Object {}}
                />
              </icon>
            </button2__icon>
          </button>
        </button2>
        <popup2
          anchor={[Function]}
          autoclosable={true}
          directions={
            Array [
              "left-center",
            ]
          }
          hasTail={true}
          key="popup"
          mix={
            Object {
              "block": "copy-link",
              "elem": "popup",
              "mods": Object {},
            }
          }
          onAfterClose={[Function]}
          onAfterOpen={[Function]}
          onBeforeClose={[Function]}
          onBeforeOpen={[Function]}
          onOutsideClick={[Function]}
          secondaryOffset={0}
          tailOffset={0}
          target="anchor"
          theme="normal"
          view="classic"
          visible={false}
          zIndexGroupLevel={0}
        />
      </div>
    </copy-link>
    <button2
      key="close"
      mix={
        Object {
          "block": "cert-card",
          "elem": "button-close",
          "mods": Object {},
        }
      }
      onClick={[MockFunction]}
      size="s"
      tabIndex={0}
      theme="clear"
      view="classic"
    >
      <button
        aria-disabled="false"
        aria-pressed="false"
        autoComplete="off"
        className="control button2 button2_view_classic button2_size_s button2_theme_clear cert-card__button-close"
        data-lego="react"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
        tabIndex={0}
        type="button"
      >
        <button2__icon
          key="only-icon"
          size="s"
        >
          <icon
            mix={
              Array [
                undefined,
                Object {
                  "block": "button2",
                  "elem": "icon",
                  "mods": Object {
                    "side": undefined,
                  },
                },
              ]
            }
            size="s"
            type="cross-websearch"
          >
            <span
              className="icon icon_type_cross-websearch icon_size_s button2__icon"
              data-lego="react"
              style={Object {}}
            />
          </icon>
        </button2__icon>
      </button>
    </button2>
  </div>
</cert-card__controls>
`;
